fix dark mode for current ui, enhance UI

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,24 +3,41 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --card-background: #f2f2f2;
+  --font-primary: #000000;
+  --font-secondary: #555;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-card-background: var(--card-background);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-primary: var(--font-primary);
+  --font-secondary: var(--font-secondary);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --card-background: var(--color-neutral-800);
+    --font-primary: #ffffff;
+    --font-secondary: var(--color-gray-200);
   }
 }
 
 body {
   background: var(--background);
-  color: var(--foreground);
+  color: var(--font-secondary);
   font-family: "Poppins", Helvetica, sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: var(--font-primary);
 }
